align center fix

--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -32,7 +32,6 @@ body, html {
 /* === Sidebar === */
 .sidebar {
   background-color: var(--sidebar-bg, #121212);
-  width: 16rem;
   display: flex;
   flex-direction: column;
   border-right: 1px solid var(--sidebar-border, #2c2c2c);
@@ -140,6 +139,7 @@ body, html {
   align-items: center;
   gap: 2rem;
   padding-top: 2rem;
+  width: 14rem;
 }
 
 .logo {
@@ -219,36 +219,28 @@ nav a {
   }
 }
 
-/* === Main Content === */
-.main-content {
-  flex: 1;
-  padding: 0 2rem;
-  overflow-y: auto;
-  box-shadow: 0 -1px 0 var(--sidebar-border, #2c2c2c) inset;
-}
-
 /* === Right Panel === */
-.right-content {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-.right-footer {
-    margin-top: auto;
-    text-align: center;
-    color: var(--right-footer, #666);
-    font-size: 0.75rem;
-}
-
 .right-panel {
-  width: 16rem;
   background-color: var(--right-panel-bg, #181818);
   border-left: 1px solid var(--sidebar-border, #2c2c2c);
   padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  .right-content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 14rem;
+  }
+
+  .right-footer {
+      margin-top: auto;
+      text-align: center;
+      color: var(--right-footer, #666);
+      font-size: 0.75rem;
+  }
 
     a {
       color: var(--accent, #86f7b3);
@@ -619,8 +611,6 @@ nav a {
       font-size: 0.9em;
     }
   }
-
-
 }
 .corner-label-dev {
   position: absolute;
@@ -638,7 +628,7 @@ nav a {
   border-radius: 7px;
   box-shadow: 0 2px 14px 0 rgba(45, 255, 196, 0.25);
   transform: rotate(-24deg);
-  pointer-events: none; // så att inget blockeras under
+  pointer-events: none;
   user-select: none;
 
   @media (max-width: 600px) {
@@ -648,4 +638,3 @@ nav a {
     top: 16px;
   }
 }
-
